gcc/testsuite/rust/rustc/ui/error-codes/E0565.rs
// repr currently doesn't support literals
#[repr("C")] // { dg-error ".E0565." "" { target *-*-* } }
// { dg-error "" "" { target *-*-* } .-2 }
struct A {  }

fn main() {  }

